--- a/specs/index.html
+++ b/specs/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../vendor/jasmine/jasmine.js"></script>
     <script type="text/javascript" src="../vendor/jasmine/jasmine-html.js"></script>
     <script type="text/javascript" src="http://sinonjs.org/releases/sinon.js"></script>
+    <script type="text/javascript" src="../vendor/jasmine-sinon/jasmine-sinon.js"></script>
   </head>
   <body>
     <script type="text/javascript">
