--- a/specs/index.html
+++ b/specs/index.html
@@ -26,7 +26,7 @@
         }
       });
 
-      require(['../specs/models/post.spec', '../specs/collections/posts.spec'], function() {
+      require(['../specs/models/post.spec', '../specs/collections/posts.spec', '../specs/routers/routes.spec'], function() {
         jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
         jasmine.getEnv().execute();
       });
