Add 'posts' class to posts list.

--- a/specs/index.html
+++ b/specs/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="../vendor/jasmine/jasmine-html.js"></script>
     <script type="text/javascript" src="http://sinonjs.org/releases/sinon.js"></script>
     <script type="text/javascript" src="../vendor/jasmine-sinon/jasmine-sinon.js"></script>
+    <script type="text/javascript" src="../vendor/jasmine-jquery/jasmine-jquery.js"></script>
   </head>
   <body>
     <script type="text/javascript">
