--- a/specs/index.html
+++ b/specs/index.html
@@ -17,12 +17,14 @@
         baseUrl: '../scripts',
         shim: {
           underscore: {exports: '_'},
-          backbone: {deps: ['underscore', 'jquery'], exports: 'Backbone'}
+          backbone: {deps: ['underscore', 'jquery'], exports: 'Backbone'},
+          handlebars: {exports: 'Handlebars'}
         },
         paths: {
           jquery: 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min',
           underscore: 'http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min',
           backbone: 'http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min',
+          handlebars: 'http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0.beta6/handlebars.min',
           text: '../vendor/requirejs-text/text'
         }
       };
@@ -36,7 +38,7 @@
         return require.config(contextConfig);
       }
 
-      require(['../specs/models/post.spec', '../specs/collections/posts.spec', '../specs/routers/routes.spec', '../specs/routers/routers.spec', '../specs/views/posts.spec'], function() {
+      require(['../specs/models/post.spec', '../specs/collections/posts.spec', '../specs/routers/routes.spec', '../specs/routers/routers.spec', '../specs/views/posts.spec', '../specs/views/post.spec'], function() {
         jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
         jasmine.getEnv().execute();
       });
