--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>The Rinehart Reader</title>
-    <script data-main="scripts/main" src="vendor/requirejs/require.js"></script>
+    <script data-main="/scripts/main" src="/vendor/requirejs/require.js"></script>
   </head>
   <body>
     <section id="app">
