Make header link back to home page.
I want this to go through Backbone's router rather than reloading the
page.  This seems to be the correct way to do that, even if it is pretty
verbose.

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <link href="/styles/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <h1>Rinehart Reader</h1>
+    <header id="pageHeader">
+      <h1 id="pageTitle">Rinehart Reader</h1>
     </header>
     <div class="container-fluid">
       <div class="row-fluid">
